<resources>
    <string name="app_name">SportP</string>
    <string name="activity_name">Activity name</string>
    <string name="create_your_activity">Create Your Activity</string>
    <string name="please_enter_activity_name">activity name</string>
    <string name="create">Create!</string>
    <string name="please_enter_start_time">start time</string>
    <string name="start_time">Start time</string>
    <string name="activity_description">Activity description</string>
    <string name="make_public">Make public</string>
    <string name="please_enter_description">description</string>
    <string name="please_enter_end_time">end time</string>
    <string name="please_enter_location">location</string>
    <string name="please_enter_feedback">Please leave your feedback for this activity.</string>
    <string name="please_enter_max_people">max people</string>
    <string name="please_enter_cost">total cost</string>
    <string name="please_enter_tag">tag</string>
    <string name="alert_received">Alert received!</string>

    <string name="show_activity">Show Activity</string>
    <string name="end_time">end time</string>
    <string name="activity_location">activity location</string>
    <string name="activity_max_people">max people</string>
    <string name="activity_cost">cost</string>
    <string name="number_of_participants">Number of participants</string>
    <string name="activity_tag">activity tag</string>
    <string name="join_activity">Join</string>
    <string name="activity_date">activity date</string>
    <string name="host_id">Host ID</string>

    <string name="todo">TODO</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="service_not_available">Service not available ..check network connection</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">address found</string>
    <string name="not_support_area">This area is not supported yet</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="search_place">Search a place</string>
    <string name="confirm_pickup">Confirm pickup</string>
    <string name="confirm_dest">Confirm destination</string>
    <string name="failed_select_location">failed to select location please try again</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>