<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTintMode="multiply"
    tools:context=".MainActivity">


    <View
        android:id="@+id/startView2"
        android:layout_width="411dp"
        android:layout_height="200dp"
        android:layout_marginTop="228dp"
        android:background="#F35C5C5C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/startView"
        android:layout_width="382dp"
        android:layout_height="376dp"
        android:layout_marginTop="416dp"
        android:background="#F3D6D5D5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottomView"
        android:layout_width="413dp"
        android:layout_height="254dp"
        android:background="@drawable/sport_gym"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/showActivity"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/show_activity"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showActivityName"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|start"
        android:text="@string/activity_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/showActivityCost"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomView" />

    <TextView
        android:id="@+id/showActivityDescription"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|start|top"
        android:text="@string/activity_description"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivityName" />

    <TextView
        android:id="@+id/showActivityCost"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|start"
        android:text="@string/activity_cost"
        android:textColor="#F9A825"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_cost_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomView" />

    <TextView
        android:id="@+id/showActivityMaxPeople"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_google_signin_btn_text_light_focused"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|start"
        android:text="@string/activity_max_people"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivityLoaction" />

    <TextView
        android:id="@+id/showActivityTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|start"
        android:text="@string/activity_tag"
        android:textColor="#0124D5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivityMaxPeople" />

    <TextView
        android:id="@+id/showActivityEndTime"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/common_google_signin_btn_text_light_focused"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|fill_vertical"
        android:text="@string/end_time"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_time_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivityDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/showActivityStartTime"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/common_google_signin_btn_text_light_focused"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|fill_vertical"
        android:text="@string/start_time"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_time_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/showActivityEndTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivityDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/showActivityLoaction"
        android:layout_width="360dp"
        android:layout_height="39dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/common_google_signin_btn_text_light_focused"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|start"
        android:text="@string/activity_location"
        android:textColor="#075FF8"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:drawableStartCompat="@drawable/ic_loaction_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivityStartTime" />


    <Button
        android:id="@+id/joinActivityButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/join_activity"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/startView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivityTag"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/showActivityDate"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_google_signin_btn_text_light_focused"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|fill_vertical"
        android:text="@string/activity_date"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startView" />

    <TextView
        android:id="@+id/showActivityHostId"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/common_google_signin_btn_text_light_focused"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center|clip_vertical|fill_vertical"
        android:text="@string/host_id"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/showActivityMaxPeople"
        app:layout_constraintTop_toBottomOf="@+id/showActivityLoaction" />


</androidx.constraintlayout.widget.ConstraintLayout>