<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectLocation"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="#C4F8F5"

    android:backgroundTintMode="multiply"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="148dp"
        android:background="@drawable/different_sports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createActivityTitle" />

    <View
        android:id="@+id/view3"
        android:layout_width="412dp"
        android:layout_height="578dp"
        android:layout_marginTop="8dp"
        android:background="#ECECEC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view4"
        android:layout_width="411dp"
        android:layout_height="280dp"
        android:background="#79B5FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view5"
        android:layout_width="370dp"
        android:layout_height="318dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editActivityEndTime" />

    <EditText
        android:id="@+id/editActivityName"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_inputbox"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start"
        android:hint="@string/please_enter_activity_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck"
        tools:textAlignment="gravity" />

    <EditText
        android:id="@+id/editActivityDescription"
        android:layout_width="390dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_inputbox"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start|top"
        android:hint="@string/please_enter_description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editActivityName"
        tools:ignore="TextContrastCheck"
        tools:textAlignment="gravity" />

    <EditText
        android:id="@+id/editActivityTag"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_inputbox"
        android:drawableStart="@drawable/ic_tag"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start"
        android:hint="@string/please_enter_tag"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAllCaps="false"
        android:textColor="#0124D5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/editActivityPeople"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editActivityDate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_inputbox"
        android:clickable="false"
        android:drawableEnd="@drawable/ic_date"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start"
        android:hint="@string/activity_date"
        android:inputType="date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editActivityDescription"
        tools:ignore="TextContrastCheck"
        tools:textAlignment="gravity" />

    <EditText

        android:id="@+id/editActivityStartTime"
        android:layout_width="150dp"

        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_inputbox"
        android:clickable="false"
        android:drawableEnd="@drawable/ic_time_start"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start"
        android:hint="@string/please_enter_start_time"
        android:inputType="time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editActivityDate"
        tools:ignore="TextContrastCheck"
        tools:textAlignment="gravity" />

    <EditText
        android:id="@+id/editActivityEndTime"
        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_inputbox"
        android:clickable="false"
        android:drawableEnd="@drawable/ic_time_end"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start"
        android:hint="@string/please_enter_end_time"
        android:inputType="time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editActivityStartTime"
        app:layout_constraintTop_toBottomOf="@+id/editActivityDate"
        tools:ignore="TextContrastCheck"
        tools:textAlignment="gravity" />

    <TextView
        android:id="@+id/editActivityLocation"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_inputbox"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start"
        android:hint="Please select location"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/editActivityEndTime"
        tools:ignore="TextContrastCheck"
        tools:textAlignment="center" />

    <EditText
        android:id="@+id/editActivityPeople"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_inputbox"
        android:clickable="false"
        android:drawableStart="@drawable/ic_people"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start"
        android:hint="@string/please_enter_max_people"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/editActivityLocation"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editActivityCost"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:background="@drawable/rounded_inputbox"
        android:clickable="false"
        android:drawableStart="@drawable/ic_cost"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center|start"
        android:hint="@string/please_enter_cost"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editActivityName"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="TextContrastCheck"
        tools:textAlignment="gravity" />

    <Button
        android:id="@+id/createActivitySubmit"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="sumbitCreateActivity"
        android:text="@string/create"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/editActivityTag"
        app:strokeColor="#000000" />

    <Switch
        android:id="@+id/activityIsPublic"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:checked="true"
        android:fontFamily="sans-serif-smallcaps"
        android:minHeight="48dp"
        android:text="@string/make_public"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/createActivitySubmit"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/editActivityTag" />

    <TextView
        android:id="@+id/alertTextView"
        android:layout_width="227dp"
        android:layout_height="112dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/alert_received"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/createActivityTitle"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:background="#FFFCFC"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="clip_horizontal|center"
        android:text="@string/create_your_activity"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/selectLLocation1"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="Location"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/editActivityPeople"
        app:layout_constraintTop_toBottomOf="@+id/editActivityLocation" />


</androidx.constraintlayout.widget.ConstraintLayout>